<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.album.create.CreateAlbumFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextAppearance.Material3.HeadlineLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_un_album"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWelcomeDescription"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/dale_tu_propio_estilo"
                android:textColor="?android:attr/textColorSecondary" />


            <ImageView
                android:id="@+id/coverPreviewImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:visibility="gone"
                android:contentDescription="@string/cover_preview" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#5A5F73"
                android:hint="@string/nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombreEditText"
                    android:textColor="#5A5F73"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/urlCoverTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/url_de_la_imagen_del_album">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/urlCoverEditText"
                    android:layout_width="match_parent"
                    android:textColor="#5A5F73"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/releaseDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_de_salida"
                android:layout_marginTop="8dp"
                app:endIconContentDescription="Open Date Picker"
                app:endIconDrawable="@drawable/baseline_calendar_24"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/releaseDateInputEditText"
                    android:textColor="#5A5F73"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/descripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="8"
                    android:minLines="4"
                    android:textColor="#5A5F73"
                    android:scrollbars="vertical"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/generoTextView"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/genero">

                <AutoCompleteTextView
                    android:id="@+id/generoAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@string/genero"
                    app:simpleItems="@array/genero_items"
                    android:labelFor="@id/generoTextView"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/disqueraTextView"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/disquera">

                <AutoCompleteTextView
                    android:id="@+id/disqueraAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@string/disquera"
                    app:simpleItems="@array/disquera_items"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="50dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/btnCrear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crear"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnCancelar"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/loading_panel"
        layout="@layout/loading_panel_view"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>